primer version funcional

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,15 @@
 {
   "sourcepawnLanguageServer.trace.server": "verbose",
-  "sourcepawnLanguageServer.sourcemod_home": "c:/Users/aleja/repositories/KARMA-SYSTEM/include",
-  "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+  "sourcepawnLanguageServer.sourcemod_home": "/home/alejandro/repositories/KARMA-SYSTEM/include/karma",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/include/*.inc": true
-    // "**/compile*": true,
-    // "**/spcomp.exe": true
+    "**/include/*.inc": true,
+    "**/compile": true,
+    "**/spcomp*": true
   }
 }
 // file_path_new, "-D", compile_path, "-v 0", "-i"
